examples/dcm/slurm-60087382.out
sed: -e expression #1, char 33: unknown option to `s'
sed: -e expression #1, char 34: unknown option to `s'
[2025-10-31T09:00:17+0100] Trying with NO CUDA/cuDNN modules
[2025-10-31T09:00:17+0100] Activating conda env: mmml-full
[2025-10-31T09:00:18+0100] Using python: /scicore/home/meuwly/boitti0000/.conda/envs/mmml-full/bin/python
[2025-10-31T09:00:18+0100] nvidia-smi:
Unable to determine the device handle for GPU0: 0000:84:00.0: Unknown Error
No devices were found
[2025-10-31T09:00:23+0100] SANITY FAIL for [modules=[none] env=conda:mmml-full] (details in _gpu_try_logs/sanity_modules__none__env_conda_mmml-full.json)
  ERROR:2025-10-31 09:00:22,901:jax._src.xla_bridge:473: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
  Traceback (most recent call last):
    File "/scicore/home/meuwly/boitti0000/.conda/envs/mmml-full/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 471, in discover_pjrt_plugins
      plugin_module.initialize()
    File "/scicore/home/meuwly/boitti0000/.conda/envs/mmml-full/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 328, in initialize
      _check_cuda_versions(raise_on_first_error=True)
    File "/scicore/home/meuwly/boitti0000/.conda/envs/mmml-full/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 285, in _check_cuda_versions
      local_device_count = cuda_versions.cuda_device_count()
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: CUDA_ERROR_NO_DEVICE
  WARNING:2025-10-31 09:00:22,907:jax._src.xla_bridge:850: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
  {"ok": false, "python_exe": "/scicore/home/meuwly/boitti0000/.conda/envs/mmml-full/bin/python", "python_ver": "3.12.11", "jax": "0.8.0", "jaxlib": "0.8.0", "cuda_version_from_jaxlib": null, "backend": "cpu", "devices": ["TFRT_CPU_0"], "cuda_visible_devices": "0"}
[2025-10-31T09:00:23+0100] Activating conda env: hello
[2025-10-31T09:00:23+0100] Using python: /scicore/home/meuwly/boitti0000/.conda/envs/hello/bin/python
[2025-10-31T09:00:23+0100] nvidia-smi:
Unable to determine the device handle for GPU0: 0000:84:00.0: Unknown Error
No devices were found
[2025-10-31T09:00:39+0100] SANITY FAIL for [modules=[none] env=conda:hello] (details in _gpu_try_logs/sanity_modules__none__env_conda_hello.json)
  /scicore/home/meuwly/boitti0000/.conda/envs/hello/lib/python3.13/site-packages/jaxlib/plugin_support.py:71: RuntimeWarning: JAX plugin jax_cuda13_plugin version 0.8.0 is installed, but it is not compatible with the installed jaxlib version 0.7.1, so it will not be used.
    warnings.warn(
  ERROR:2025-10-31 09:00:38,658:jax._src.xla_bridge:487: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda13.initialize()
  Traceback (most recent call last):
    File "/scicore/home/meuwly/boitti0000/.conda/envs/hello/lib/python3.13/site-packages/jax/_src/xla_bridge.py", line 485, in discover_pjrt_plugins
      plugin_module.initialize()
      ~~~~~~~~~~~~~~~~~~~~~~~~^^
    File "/scicore/home/meuwly/boitti0000/.conda/envs/hello/lib/python3.13/site-packages/jax_plugins/xla_cuda13/__init__.py", line 328, in initialize
      _check_cuda_versions(raise_on_first_error=True)
      ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^
    File "/scicore/home/meuwly/boitti0000/.conda/envs/hello/lib/python3.13/site-packages/jax_plugins/xla_cuda13/__init__.py", line 285, in _check_cuda_versions
      local_device_count = cuda_versions.cuda_device_count()
  RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: CUDA_ERROR_NO_DEVICE
  WARNING:2025-10-31 09:00:38,796:jax._src.xla_bridge:864: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
  {"ok": false, "python_exe": "/scicore/home/meuwly/boitti0000/.conda/envs/hello/bin/python", "python_ver": "3.13.7", "jax": "0.7.1", "jaxlib": "0.7.1", "cuda_version_from_jaxlib": null, "backend": "cpu", "devices": ["TFRT_CPU_0"], "cuda_visible_devices": "0"}
[2025-10-31T09:00:40+0100] Activating conda env: mmml-gpu
[2025-10-31T09:00:40+0100] Using python: /scicore/home/meuwly/boitti0000/.conda/envs/mmml-gpu/bin/python
[2025-10-31T09:00:40+0100] nvidia-smi:
Unable to determine the device handle for GPU0: 0000:84:00.0: Unknown Error
No devices were found
[2025-10-31T09:00:41+0100] SANITY FAIL for [modules=[none] env=conda:mmml-gpu] (details in _gpu_try_logs/sanity_modules__none__env_conda_mmml-gpu.json)
  {"ok": false, "error": "ModuleNotFoundError(\"No module named 'jax'\")"}
[2025-10-31T09:00:41+0100] Activating conda env: mmml-py312
[2025-10-31T09:00:42+0100] Using python: /scicore/home/meuwly/boitti0000/.conda/envs/mmml-py312/bin/python
[2025-10-31T09:00:42+0100] nvidia-smi:
Unable to determine the device handle for GPU0: 0000:84:00.0: Unknown Error
No devices were found
[2025-10-31T09:00:43+0100] SANITY FAIL for [modules=[none] env=conda:mmml-py312] (details in _gpu_try_logs/sanity_modules__none__env_conda_mmml-py312.json)
  {"ok": false, "error": "ModuleNotFoundError(\"No module named 'ml_dtypes'\")"}
[2025-10-31T09:00:44+0100] Activating conda env: base
[2025-10-31T09:00:44+0100] Using python: /scicore/soft/easybuild/apps/Miniconda3/24.7.1-0/bin/python
[2025-10-31T09:00:44+0100] nvidia-smi:
Unable to determine the device handle for GPU0: 0000:84:00.0: Unknown Error
No devices were found
[2025-10-31T09:00:44+0100] SANITY FAIL for [modules=[none] env=conda:base] (details in _gpu_try_logs/sanity_modules__none__env_conda_base.json)
  {"ok": false, "error": "ModuleNotFoundError(\"No module named 'jax'\")"}
[2025-10-31T09:00:44+0100] Activating venv: /scicore/home/meuwly/boitti0000/mmml/.venv
[2025-10-31T09:00:44+0100] Using python: /scicore/home/meuwly/boitti0000/mmml/.venv/bin/python
[2025-10-31T09:00:44+0100] nvidia-smi:
Unable to determine the device handle for GPU0: 0000:84:00.0: Unknown Error
No devices were found
[2025-10-31T09:00:47+0100] SANITY FAIL for [modules=[none] env=venv:/scicore/home/meuwly/boitti0000/mmml/.venv] (details in _gpu_try_logs/sanity_modules__none__env_venv__scicore_home_meuwly_boitti0000_mmml_.venv.json)
  ERROR:2025-10-31 09:00:46,932:jax._src.xla_bridge:473: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
  Traceback (most recent call last):
    File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 471, in discover_pjrt_plugins
      plugin_module.initialize()
    File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 328, in initialize
      _check_cuda_versions(raise_on_first_error=True)
    File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 285, in _check_cuda_versions
      local_device_count = cuda_versions.cuda_device_count()
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: CUDA_ERROR_NO_DEVICE
  WARNING:2025-10-31 09:00:46,939:jax._src.xla_bridge:850: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
  {"ok": false, "python_exe": "/scicore/home/meuwly/boitti0000/mmml/.venv/bin/python", "python_ver": "3.12.0", "jax": "0.8.0", "jaxlib": "0.8.0", "cuda_version_from_jaxlib": null, "backend": "cpu", "devices": ["TFRT_CPU_0"], "cuda_visible_devices": "0"}
[2025-10-31T09:00:47+0100] Using python: /scicore/soft/easybuild/apps/Miniconda3/24.7.1-0/bin/python
[2025-10-31T09:00:47+0100] nvidia-smi:
Unable to determine the device handle for GPU0: 0000:84:00.0: Unknown Error
No devices were found
[2025-10-31T09:00:47+0100] SANITY FAIL for [modules=[none] env=system] (details in _gpu_try_logs/sanity_modules__none__env_system.json)
  {"ok": false, "error": "ModuleNotFoundError(\"No module named 'jax'\")"}
--------------------------------------------------------------------------------
[2025-10-31T09:00:47+0100] ❌ No working GPU-enabled JAX environment found.
[2025-10-31T09:00:47+0100] See logs under: _gpu_try_logs/
Tips:
  • Ensure your jaxlib build matches your CUDA major version.
  • Try loading a different CUDA module (e.g., 12.4 vs 12.2) that matches jaxlib’s reported __cuda_version__.
  • If you rely on uv, keep a pyproject.toml with your deps so uv can resolve them.
  • Consider reinstalling jax/jaxlib inside the target env with the correct CUDA build.
